# yandex-data

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: main.yaml
config/process/: process1.yaml
data/processed/: pp-complete.csv.yaml
src/: process.py  train_model.py
src/common/: __init__.py  functions.py
